# advent-of-code-2022

./: Cargo.toml  README.md
scaffold/: main.rs
src/: main.rs
