[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "warm_up"
path = "src/bin/warm_up/main.rs"

[[bin]]
name = "day1"
path = "src/bin/01/main.rs"

[[bin]]
name = "day2"
path = "src/bin/02/main.rs"

[[bin]]
name = "day3"
path = "src/bin/03/main.rs"
