[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.89"
regex = "1.7.0"


[[bin]]
name = "warm_up"
path = "src/bin/warm_up/main.rs"

[[bin]]
name = "1"
path = "src/bin/01/main.rs"

[[bin]]
name = "2"
path = "src/bin/02/main.rs"

[[bin]]
name = "3"
path = "src/bin/03/main.rs"

[[bin]]
name = "4"
path = "src/bin/04/main.rs"

[[bin]]
name = "5"
path = "src/bin/05/main.rs"

[[bin]]
name = "6"
path = "src/bin/06/main.rs"

[[bin]]
name = "7"
path = "src/bin/07/main.rs"

[[bin]]
name = "8"
path = "src/bin/08/main.rs"

[[bin]]
name = "9"
path = "src/bin/09/main.rs"

[[bin]]
name = "10"
path = "src/bin/10/main.rs"

[[bin]]
name = "11"
path = "src/bin/11/main.rs"

[[bin]]
name = "12"
path = "src/bin/12/main.rs"

[[bin]]
name = "13"
path = "src/bin/13/main.rs"

[[bin]]
name = "14"
path = "src/bin/14/main.rs"

[[bin]]
name = "15"
path = "src/bin/15/main.rs"

[[bin]]
name = "17"
path = "src/bin/17/main.rs"

[[bin]]
name = "18"
path = "src/bin/18/main.rs"
